--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://BagirovaZehra.github.io",
+  "homepage": "http://BagirovaZehra.github.io/my-task",
   "name": "my-task",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
